fix: precise spacing offset for case of css var calc

--- a/packages/ui-core/src/elements/spacing/_spacing.variables.scss
+++ b/packages/ui-core/src/elements/spacing/_spacing.variables.scss
@@ -1,4 +1,13 @@
 $class-selector: '.ms-spacing';
+$step-map: (
+  element: 0.125rem,
+  // 2px
+  component: 0.25rem,
+  // 4px
+  block: 0.375rem,
+  // 6px
+  section: 0.625rem, // 10px
+);
 $scale-size-map: (
   element: (
     xs: var(--ms-spacing-scale-element-xs),
